# aoc.rs

./: .editorconfig  Cargo.toml  README.md
src/: lib.rs
src/2023/01/: main.rs
src/2023/02/: main.rs
src/2023/03/: main.rs
src/2023/04/: main.rs
src/2023/05/: main.rs
src/2023/06/: main.rs
src/2023/07/: main.rs
src/2023/08/: main.rs
src/2023/09/: main.rs
src/2023/10/: main.rs
src/2023/11/: main.rs
src/2023/12/: main.rs
src/2024/01/: main.rs
src/2024/02/: main.rs
src/2024/03/: main.rs
src/2024/04/: main.rs
src/2024/05/: main.rs
src/2024/06/: main.rs
src/2024/07/: main.rs
src/2024/08/: main.rs
src/2024/09/: main.rs
src/2024/10/: main.rs
src/2024/11/: main.rs
src/2024/12/: main.rs
src/2024/13/: main.rs
src/2024/14/: main.rs
src/2024/15/: main.rs
src/2024/16/: main.rs
src/2024/17/: main.rs
src/2024/18/: main.rs
src/2024/19/: main.rs
src/2024/20/: main.rs
src/2024/21/: main.rs
src/2024/22/: main.rs
src/2024/23/: main.rs
src/2024/24/: main.rs
src/2024/25/: main.rs
