[package]
name = "aoc"
version = "0.1.0"
edition = "2021"

[dependencies]
regex = "1.11.1"

# 2024

[[bin]]
name = "2024_01"
path = "src/2024/01/main.rs"

[[bin]]
name = "2024_02"
path = "src/2024/02/main.rs"

[[bin]]
name = "2024_03"
path = "src/2024/03/main.rs"

[[bin]]
name = "2024_04"
path = "src/2024/04/main.rs"

[[bin]]
name = "2024_05"
path = "src/2024/05/main.rs"

# 2023

[[bin]]
name = "2023_01"
path = "src/2023/01/main.rs"

[[bin]]
name = "2023_02"
path = "src/2023/02/main.rs"

[[bin]]
name = "2023_03"
path = "src/2023/03/main.rs"

[[bin]]
name = "2023_04"
path = "src/2023/04/main.rs"

[[bin]]
name = "2023_05"
path = "src/2023/05/main.rs"
