[package]
name = "aoc"
version = "0.1.0"
edition = "2021"

[dependencies]
thiserror = "2.0.5"
anyhow = "1.0.94"
regex = "1.11.1"

# 2024

[[bin]]
name = "2024_01"
path = "src/2024/01/main.rs"

[[bin]]
name = "2024_02"
path = "src/2024/02/main.rs"

[[bin]]
name = "2024_03"
path = "src/2024/03/main.rs"

[[bin]]
name = "2024_04"
path = "src/2024/04/main.rs"

[[bin]]
name = "2024_05"
path = "src/2024/05/main.rs"

[[bin]]
name = "2024_06"
path = "src/2024/06/main.rs"

[[bin]]
name = "2024_07"
path = "src/2024/07/main.rs"

[[bin]]
name = "2024_08"
path = "src/2024/08/main.rs"

[[bin]]
name = "2024_09"
path = "src/2024/09/main.rs"

[[bin]]
name = "2024_10"
path = "src/2024/10/main.rs"

[[bin]]
name = "2024_11"
path = "src/2024/11/main.rs"

[[bin]]
name = "2024_12"
path = "src/2024/12/main.rs"

[[bin]]
name = "2024_13"
path = "src/2024/13/main.rs"

[[bin]]
name = "2024_14"
path = "src/2024/14/main.rs"

[[bin]]
name = "2024_15"
path = "src/2024/15/main.rs"

[[bin]]
name = "2024_16"
path = "src/2024/16/main.rs"

[[bin]]
name = "2024_17"
path = "src/2024/17/main.rs"

# 2023

[[bin]]
name = "2023_01"
path = "src/2023/01/main.rs"

[[bin]]
name = "2023_02"
path = "src/2023/02/main.rs"

[[bin]]
name = "2023_03"
path = "src/2023/03/main.rs"

[[bin]]
name = "2023_04"
path = "src/2023/04/main.rs"

[[bin]]
name = "2023_05"
path = "src/2023/05/main.rs"

[[bin]]
name = "2023_06"
path = "src/2023/06/main.rs"

[[bin]]
name = "2023_07"
path = "src/2023/07/main.rs"

[[bin]]
name = "2023_08"
path = "src/2023/08/main.rs"

[[bin]]
name = "2023_09"
path = "src/2023/09/main.rs"

[[bin]]
name = "2023_10"
path = "src/2023/10/main.rs"

[[bin]]
name = "2023_11"
path = "src/2023/11/main.rs"

[[bin]]
name = "2023_12"
path = "src/2023/12/main.rs"
